fix dropdown alignment

--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,11 @@ input::file-selector-button {
   color: white;
 }
 
+button.action,
+a.action {
+  width: 7.325rem;
+}
+
 button.dropdown-toggle {
   margin: 0;
   padding: 0;
@@ -88,6 +93,14 @@ div.dropdown-actions {
   display: none;
   position: absolute;
   z-index: 1;
+}
+
+div.dropdown-actions.folder-nav {
+  left: 0;
+}
+
+div.dropdown-actions.child {
+  right: 0;
 }
 
 form.sign-up,
